adicionando reset.css

--- a/produtos.html
+++ b/produtos.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Produtos - Barbearia Alura</title>
+        <link rel="stylesheet" href="reset.css"> <!-- o reset deve vir antes pq ele limpa tudo que foi feito. se for colocar depois da minha folha de estilo, vai também limpá-la--> 
         <link rel="stylesheet" href="produtos.css">
     </head>
 
