--- a/produtos.html
+++ b/produtos.html
@@ -10,15 +10,19 @@
     <body>
 
         <header>
-            <h1><img src="logo.png"></h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
+            <div class="caixa">
+                <h1><img src="logo.png"></h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+    
+                </nav>
 
-            </nav>
+            </div>
+
             
 
         </header>
