--- a/contato.html
+++ b/contato.html
@@ -28,6 +28,36 @@
         </header>
 
         <main>
+            <form>
+                <label for="nome-sobrenome">Nome e Sobrenome</label>
+                <input type="text" id="nome-sobrenome" required> 
+
+                <label for="email">E-mail</label>
+                <input type="text" id="email" required placeholder="seuemail@dominio.com"> 
+
+                <label for="telefone">Telefone</label>
+                <input type="text" id="telefone" required placeholder="(xx)xxxxx-xxxx"> 
+
+                <label for="mensagem">Deixa sua mensagem:</label>
+                <textarea cols="70" rows="10" id="mensagem"></textarea>
+
+                <div>
+                    <p>Como prefere o nosso contato?</p>
+                    <label for="email-radio">E-mail</label>
+                    <input type="radio" name="contato" value="email" id="email-radio">
+    
+                    <label for="telefone-radio">Telefone</label>
+                    <input type="radio" name="contato" value="telefone" id="telefone-radio">
+    
+                    <label for="whatsapp-radio">WhatsApp</label>
+                    <input type="radio" name="contato" value="whatsapp" id="whatsapp-radio">
+
+                </div>
+
+                <label><input type="checkbox">Gostaria de receber nossas novidades por e-mail?</label>
+
+                <input type="submit" value="Enviar formulário" required>
+            </form>
 
         </main>
 
