--- a/index.html
+++ b/index.html
@@ -45,26 +45,35 @@
             <section class="mapa">
                 <h3 class="titulo-principal">Localização</h3>
                 <p>Nossa barbearia está localizada no coração da cidade.</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59907251.580303!2d-82.49183970000001!3d-23.588244300000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1602901206362!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="mapa-conteudo">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59907251.580303!2d-82.49183970000001!3d-23.588244300000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1602901206362!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+                </div>
 
             </section>
 
             <section class = "beneficios">
                 <h3 class="titulo-principal">Benefícios</h3>
-                <ul>
-                    <li class = "items">Atendimento aos clientes</li>
-                    <li class = "items">Espaço diferenciado</li>
-                    <li class = "items">Localização</li>
-                    <li class = "items">Profissionais qualificados</li>
-                </ul>
-                <img src="beneficios.jpg" class="imagembeneficios">
+                <div class="conteudo-beneficios">
+                    <ul class="lista-beneficios">
+                        <li class = "items">Atendimento aos clientes</li>
+                        <li class = "items">Espaço diferenciado</li>
+                        <li class = "items">Localização</li>
+                        <li class = "items">Profissionais qualificados</li>
+                        <li class = "items">Pontualidade</li>
+                        <li class = "items">Limpeza</li>
+                    </ul><img src="beneficios.jpg" class="imagem-beneficios">
+
+                </div>
+                <div class="video">
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/9RvVgROetBo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+                </div>
+
             </section>
 
-            <div class="video">
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/9RvVgROetBo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            </div>
 
 
         </main>
